log
Fri 09 Sep 2022 12:20:51 PM UTC: 
 tests:  0|6
total_score: 0/70
65edf6b
Fri 09 Sep 2022 12:39:13 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:9: error: unused variable ‘primer_dato’ [-Werror=unused-variable]
   58 |   char* primer_dato = map->buckets[0]->value;
      |         ^~~~~~~~~~~
hashmap.c:57:9: error: unused variable ‘primera_clave’ [-Werror=unused-variable]
   57 |   char* primera_clave = map->buckets[0]->key;
      |         ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d36b933
Fri 09 Sep 2022 12:46:52 PM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   60 |   long* map->size = 0;
      |            ^~
hashmap.c:60:12: error: expected expression before ‘->’ token
hashmap.c:61:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   61 |   long* map->capacity = capacity;
      |            ^~
hashmap.c:61:12: error: expected expression before ‘->’ token
hashmap.c:62:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   62 |   long* map->current = map->buckets[0];
      |            ^~
hashmap.c:62:12: error: expected expression before ‘->’ token
hashmap.c:58:9: error: unused variable ‘primer_dato’ [-Werror=unused-variable]
   58 |   char* primer_dato = map->buckets[0]->value;
      |         ^~~~~~~~~~~
hashmap.c:57:9: error: unused variable ‘primera_clave’ [-Werror=unused-variable]
   57 |   char* primera_clave = map->buckets[0]->key;
      |         ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2361b31
Fri 09 Sep 2022 12:47:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘.’ token
   60 |   long* map.size = 0;
      |            ^
hashmap.c:60:12: error: expected expression before ‘.’ token
hashmap.c:61:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   61 |   long* map->capacity = capacity;
      |            ^~
hashmap.c:61:12: error: expected expression before ‘->’ token
hashmap.c:62:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   62 |   long* map->current = map->buckets[0];
      |            ^~
hashmap.c:62:12: error: expected expression before ‘->’ token
hashmap.c:58:9: error: unused variable ‘primer_dato’ [-Werror=unused-variable]
   58 |   char* primer_dato = map->buckets[0]->value;
      |         ^~~~~~~~~~~
hashmap.c:57:9: error: unused variable ‘primera_clave’ [-Werror=unused-variable]
   57 |   char* primera_clave = map->buckets[0]->key;
      |         ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
eed1791
Fri 09 Sep 2022 12:47:25 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   61 |   long* map->capacity = capacity;
      |            ^~
hashmap.c:61:12: error: expected expression before ‘->’ token
hashmap.c:62:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   62 |   long* map->current = map->buckets[0];
      |            ^~
hashmap.c:62:12: error: expected expression before ‘->’ token
hashmap.c:58:9: error: unused variable ‘primer_dato’ [-Werror=unused-variable]
   58 |   char* primer_dato = map->buckets[0]->value;
      |         ^~~~~~~~~~~
hashmap.c:57:9: error: unused variable ‘primera_clave’ [-Werror=unused-variable]
   57 |   char* primera_clave = map->buckets[0]->key;
      |         ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c4f5287
Fri 09 Sep 2022 12:47:35 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:62:16: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Werror=int-conversion]
   62 |   map->current = map->buckets[0];
      |                ^
hashmap.c:58:9: error: unused variable ‘primer_dato’ [-Werror=unused-variable]
   58 |   char* primer_dato = map->buckets[0]->value;
      |         ^~~~~~~~~~~
hashmap.c:57:9: error: unused variable ‘primera_clave’ [-Werror=unused-variable]
   57 |   char* primera_clave = map->buckets[0]->key;
      |         ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fed4993
Fri 09 Sep 2022 12:48:12 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
deca930
Fri 09 Sep 2022 12:48:50 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:62:16: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Werror=int-conversion]
   62 |   map->current = map->buckets[0];
      |                ^
hashmap.c:58:9: error: unused variable ‘primer_dato’ [-Werror=unused-variable]
   58 |   char* primer_dato = map->buckets[0]->value;
      |         ^~~~~~~~~~~
hashmap.c:57:9: error: unused variable ‘primera_clave’ [-Werror=unused-variable]
   57 |   char* primera_clave = map->buckets[0]->key;
      |         ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f004134
Fri 09 Sep 2022 12:50:18 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:9: error: unused variable ‘primer_dato’ [-Werror=unused-variable]
   58 |   char* primer_dato = map->buckets[0]->value;
      |         ^~~~~~~~~~~
hashmap.c:57:9: error: unused variable ‘primera_clave’ [-Werror=unused-variable]
   57 |   char* primera_clave = map->buckets[0]->key;
      |         ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9ee0f5c
Fri 09 Sep 2022 12:53:28 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
a6a747a
Fri 09 Sep 2022 12:58:06 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
bee01e5
Fri 09 Sep 2022 12:59:17 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
89130fa
Fri 09 Sep 2022 01:10:49 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:29: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘capicity’; did you mean ‘capacity’?
   46 |   size_t i = hash(key, map->capicity); // punto donde debe ir guardado
      |                             ^~~~~~~~
      |                             capacity
Compilation failed
2dcb29f
Fri 09 Sep 2022 01:10:58 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
0b0fd51
Fri 09 Sep 2022 01:15:47 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:12: error: comparison between pointer and integer [-Werror]
   48 |   while (i != NULL && key==NULL){
      |            ^~
cc1: all warnings being treated as errors
Compilation failed
449c71d
